Fix spacing between sections

--- a/styles.css
+++ b/styles.css
@@ -101,8 +101,8 @@ section,
 .line-border {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-300);
-  margin-bottom: var(--spacing-400); 
+  gap: var(--spacing-400);
+  margin-bottom: var(--spacing-400)
 }
 
 main {
